--- a/BDOBossTimer/app/src/main/res/layout/activity_main.xml
+++ b/BDOBossTimer/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context="com.penstack.dbobosstimer.MainActivity">
     <RelativeLayout
         android:id="@+id/main"
         android:layout_width="match_parent"
@@ -26,5 +26,6 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="90dp" />
+
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
