--- a/BDOBossTimer/app/src/main/res/layout/bosses.xml
+++ b/BDOBossTimer/app/src/main/res/layout/bosses.xml
@@ -8,37 +8,49 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="376dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="10dp"
         android:orientation="horizontal"
-        tools:layout_editor_absoluteX="153dp"
-        tools:layout_editor_absoluteY="16dp"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="0dp">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
         <ImageView
             android:id="@+id/bossImage"
-            android:layout_width="189dp"
-            android:layout_height="128dp" />
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            />
+        <TextView
+            android:id="@+id/BossName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Boss Name"
+            android:textStyle="bold"
+            android:textAlignment="center"/>
+    </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/time"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
-
-            <TextView
-                android:id="@+id/BossName"
-                android:layout_width="match_parent"
-                android:layout_height="57dp"
-                android:text="TextView"
-               />
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/timeZone"
                 android:layout_width="match_parent"
-                android:layout_height="71dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/BossName"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginTop="5dp"
                 android:text="TextView"
-                android:layout_below="@+id/BossName"/>
+                android:textSize="40dp"
+                android:textAlignment="center"
+                android:textStyle="bold" />
         </LinearLayout>
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
