--- a/BDOBossTimer/app/src/main/res/layout/bosses.xml
+++ b/BDOBossTimer/app/src/main/res/layout/bosses.xml
@@ -6,51 +6,63 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="376dp"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="10dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="0dp">
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="120dp"
+
+        >
+
         <ImageView
-            android:id="@+id/bossImage"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            />
-        <TextView
-            android:id="@+id/BossName"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Boss Name"
-            android:textStyle="bold"
-            android:textAlignment="center"/>
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/bdotimergr01" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="120dp"
+            android:layout_margin="10dp"
+            android:orientation="horizontal"
+            >
 
-            <TextView
-                android:id="@+id/timeZone"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/BossName"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginTop="5dp"
-                android:text="TextView"
-                android:textSize="40dp"
-                android:textAlignment="center"
-                android:textStyle="bold" />
-        </LinearLayout>
+                android:orientation="vertical">
 
-    </LinearLayout>
+                <ImageView
+                    android:id="@+id/bossImage"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp" />
+
+                <TextView
+                    android:id="@+id/BossName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Boss Name"
+                    android:textAlignment="center"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/timeZone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/BossName"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_marginTop="5dp"
+                    android:text="TextView"
+                    android:textAlignment="center"
+                    android:textSize="40dp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+        </LinearLayout>
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
