--- a/BDOBossTimer/app/src/main/res/layout/activity_main.xml
+++ b/BDOBossTimer/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="90dp" />
+        tools:layout_editor_absoluteY="90dp" >
 
+
+    </ListView>
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="time" />
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
