--- a/BDOBossTimer/app/src/main/res/layout/activity_main.xml
+++ b/BDOBossTimer/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/listView0"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:divider="@android:color/white"
         android:dividerHeight="2px"
@@ -25,7 +24,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="90dp" >
+        tools:layout_editor_absoluteY="90dp"
+         >
 
 
     </android.support.v7.widget.RecyclerView>
