--- a/BDOBossTimer/app/src/main/res/layout/bosses.xml
+++ b/BDOBossTimer/app/src/main/res/layout/bosses.xml
@@ -26,19 +26,19 @@
             >
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/bossImage"
                     android:layout_width="100dp"
-                    android:layout_height="100dp" />
-
+                    android:layout_height="100dp"
+                    android:scaleType="centerCrop"/>
 
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
@@ -46,23 +46,26 @@
                         android:id="@+id/BossName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="start"
                         android:text="Boss Name"
-                        android:textAlignment="center"
+                        android:textAlignment="viewStart"
                         android:textSize="30dp"
                         android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/timeLeft"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/BossName"
+                        android:layout_gravity="start"
                         android:layout_marginHorizontal="5dp"
                         android:layout_marginTop="5dp"
                         android:text="TextView"
-                        android:textAlignment="center"
+                        android:textAlignment="viewStart"
                         android:textSize="40dp"
                         android:textStyle="bold" />
                 </LinearLayout>
+
             </LinearLayout>
 
 
