--- a/BDOBossTimer/app/src/main/res/layout/activity_main.xml
+++ b/BDOBossTimer/app/src/main/res/layout/activity_main.xml
@@ -30,5 +30,19 @@
 
     </android.support.v7.widget.RecyclerView>
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/settButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable = "true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="7dp"
+            android:scaleType="fitCenter"
+            app:srcCompat="@mipmap/ic_launcher_round" />
+
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
