--- a/BDOBossTimer/app/src/main/res/layout/settings.xml
+++ b/BDOBossTimer/app/src/main/res/layout/settings.xml
@@ -73,7 +73,8 @@
         android:text="Karanda"
         android:textStyle="bold"
         android:layout_marginTop="5dp"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        android:onClick="onCheckboxClicked"/>
 
     <CheckBox
         android:id="@+id/checkKutum"
@@ -83,7 +84,7 @@
         android:textStyle="bold"
         android:layout_marginTop="5dp"
         android:textSize="20dp"
-        />
+        android:onClick="onCheckboxClicked"/>
 
     <CheckBox
         android:id="@+id/checkKzarka"
@@ -93,7 +94,7 @@
         android:textStyle="bold"
         android:layout_marginTop="5dp"
         android:textSize="20dp"
-        />
+        android:onClick="onCheckboxClicked"/>
 
     <CheckBox
         android:id="@+id/checkNouver"
@@ -103,7 +104,7 @@
         android:textStyle="bold"
         android:layout_marginTop="5dp"
         android:textSize="20dp"
-        />
+        android:onClick="onCheckboxClicked"/>
 
     <CheckBox
         android:id="@+id/checkOffin"
@@ -113,7 +114,7 @@
         android:textStyle="bold"
         android:layout_marginTop="5dp"
         android:textSize="20dp"
-        />
+        android:onClick="onCheckboxClicked"/>
 
     <CheckBox
         android:id="@+id/checkQuint"
@@ -123,7 +124,7 @@
         android:textStyle="bold"
         android:layout_marginTop="5dp"
         android:textSize="20dp"
-        />
+        android:onClick="onCheckboxClicked"/>
 
     <CheckBox
         android:id="@+id/checkVell"
@@ -133,7 +134,7 @@
         android:textStyle="bold"
         android:layout_marginTop="5dp"
         android:textSize="20dp"
-       />
+        android:onClick="onCheckboxClicked"/>
 </LinearLayout>
 
 
