--- a/BDOBossTimer/app/src/main/res/layout/activity_first_time_use.xml
+++ b/BDOBossTimer/app/src/main/res/layout/activity_first_time_use.xml
@@ -6,6 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".firstTimeUseActivity">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="top|center"
+
+        >
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:srcCompat="@drawable/bdoframe"
+        android:scaleType="fitXY"
+        />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,6 +35,7 @@
             android:layout_height="wrap_content"
             android:text="Welcome "
             android:textSize="30dp"
+            android:textColor="@android:color/white"
             android:textStyle="bold"
             android:paddingTop="120dp"
             />
@@ -30,6 +47,7 @@
         android:text="Select Server:"
         android:textSize="30dp"
         android:textStyle="bold"
+        android:textColor="@android:color/white"
         android:paddingTop="15dp"
         />
 
@@ -47,7 +65,9 @@
             android:paddingRight="60dp"
             android:textStyle="bold"
             android:textSize="20dp"
-            android:layout_marginTop="5dp"/>
+            android:textColor="@android:color/white"
+            android:layout_marginTop="5dp"
+            android:buttonTint="@android:color/white"/>
 
         <RadioButton
             android:id="@+id/rbEU"
@@ -57,7 +77,9 @@
             android:onClick="onRadioButtonClicked"
             android:text="EU"
             android:textSize="20dp"
-            android:textStyle="bold" />
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:buttonTint="@android:color/white"/>
     </RadioGroup>
 
         <Button
@@ -67,4 +89,5 @@
             android:layout_marginTop="60dp"
             android:text="spot taken." />
     </LinearLayout>
+   </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
