--- a/BDOBossTimer/app/src/main/res/layout/bosses.xml
+++ b/BDOBossTimer/app/src/main/res/layout/bosses.xml
@@ -50,6 +50,7 @@
                         android:text="Boss Name"
                         android:textAlignment="viewStart"
                         android:textSize="30dp"
+                        android:textColor="@android:color/white"
                         android:textStyle="bold" />
 
                     <TextView
@@ -63,6 +64,7 @@
                         android:text="TextView"
                         android:textAlignment="viewStart"
                         android:textSize="40dp"
+                        android:textColor="@android:color/white"
                         android:textStyle="bold" />
                 </LinearLayout>
 
