--- a/BDOBossTimer/app/src/main/res/layout/activity_first_time_use.xml
+++ b/BDOBossTimer/app/src/main/res/layout/activity_first_time_use.xml
@@ -82,7 +82,7 @@
             android:buttonTint="@android:color/white"/>
     </RadioGroup>
 
-        <TextView
+      <!--  <TextView
             android:id="@+id/optOut"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -106,15 +106,19 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             />
+        -->
 
         <Button
             android:id="@+id/firstStart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:text="Continue" />
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:text="Continue"
+            android:textSize="20dp"
+            android:textAllCaps="false"
+            android:backgroundTint="#660000"/>
     </LinearLayout>
    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
