--- a/BDOBossTimer/app/src/main/res/layout/settings.xml
+++ b/BDOBossTimer/app/src/main/res/layout/settings.xml
@@ -33,7 +33,7 @@
                 android:id="@+id/serverText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="25dp"
+                android:paddingTop="5dp"
                 android:text="Select Server:"
                 android:textColor="@android:color/white"
                 android:textSize="30dp"
@@ -171,7 +171,19 @@
                     android:textColor="@android:color/white"
                     android:textSize="20dp"
                     android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/conButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:text="Private Policy"
+                    android:textSize="16dp"
+                    android:textAllCaps="false"
+                    android:backgroundTint="#660000"/>
+                    />
             </LinearLayout>
+
+
         </LinearLayout>
 
         <ImageView
