--- a/BDOBossTimer/app/src/main/res/layout/bosses.xml
+++ b/BDOBossTimer/app/src/main/res/layout/bosses.xml
@@ -63,7 +63,7 @@
                         android:layout_marginTop="5dp"
                         android:text="TextView"
                         android:textAlignment="viewStart"
-                        android:textSize="40dp"
+                        android:textSize="30sp"
                         android:textColor="#cbd0d8"
                         android:textStyle="bold" />
                 </LinearLayout>
