--- a/BDOBossTimer/app/src/main/res/layout/bosses.xml
+++ b/BDOBossTimer/app/src/main/res/layout/bosses.xml
@@ -61,8 +61,7 @@
                         android:layout_gravity="start"
                         android:layout_marginHorizontal="5dp"
                         android:layout_marginTop="5dp"
-                        android:text="
-"
+                        android:text=""
                         android:textAlignment="viewStart"
                         android:textSize="30sp"
                         android:textColor="#cbd0d8"
